# aioplugin

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/: dependabot.yaml
.github/workflows/: release.yaml  test.yaml
requirements/: dev.txt  lint.txt  pytest.txt  ruff.txt
src/aioplugin/: __init__.py  attrs.py  dataclass.py  event.py  hook.py  paramsignal.py  plugin.py
tests/: conftest.py  test_linters.py  test_paramsignal.py  test_plugin_events.py
