[project]
name = "aioplugin"
dynamic = ["version"]
description = "An asynchronous plugin tool for writing clean asynchornous decoator and class callback applications."
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiocallback>=0.2.0",
    "freezabledict2>=0.1.0",
    "frozenlist>=1.8.0",
    "propcache>=0.4.1",
    "reductable-params==0.3.0",
]

[project.optional-dependencies]
# attrs is included but might be removed in the future 
# but mainly readded back into the future documentation 
# on how to wrap in attrs.
attrs = ["attrs>=26.1.0"]

[build-system]
requires = ["setuptools"]

[tool.setuptools.dynamic]
version = {attr = "aioplugin.__version__"}

[project.urls]
    homepage = "https://github.com/Vizonex/aioplugin"
    repository = "https://github.com/Vizonex/aioplugin.git"
